Installed express, ejs and request. Added .gitignore to ignore the node_modules folder.

--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/shiv198903/yelpcamp/issues"
   },
-  "homepage": "https://github.com/shiv198903/yelpcamp#readme"
+  "homepage": "https://github.com/shiv198903/yelpcamp#readme",
+  "dependencies": {
+    "ejs": "^2.7.1",
+    "express": "^4.17.1",
+    "request": "^2.88.0"
+  }
 }
