--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "ejs-lint": "^0.3.0"
   }
 }
